# agents

./: .gitignore  .oxlintrc.json  AGENTS.md  README.md  package-lock.json  package.json
.changeset/: auto-continue-default-true.md  cuddly-chicken-argue.md  famous-tools-leave.md  fix-approval-persistence.md  fix-hibernated-stream-state.md  fix-merge-approval-responded.md  fix-workflow-error-reporting.md  keen-rare-slim.md  many-turkeys-sit.md  mark-ai-chat-codemode-optional.md  protocol-messages-per-connection.md  retry-utilities.md  security-hardening.md  surface-oauth-errors.md  sync-getters.md  tool-approval-auto-continuation.md  warm-emails-glow.md
.github/workflows/: bonk.yml  nightly.yml  pullrequest.yml  release.yml
app/: README.md
app/ai-chat/: README.md  bug.md  env.d.ts  index.html  package.json  schema.sql  vite.config.ts  wrangler.jsonc
app/android-device/: .gitignore  README.md  asr-new.md  asr.md  package.json  tts-new.md  tts.md
app/android-device/android/app/src/main/jni/: CMakeLists.txt  hermes_runtime.cpp  hermes_runtime.h  qwen_asr_jni.cpp  qwen_tts_jni.c  tools_app.cpp  tools_app.h  tools_browser.cpp  tools_browser.h
app/android-device/android/app/src/main/jni/agent/: standalone_hermes.cpp
app/android-device/android/app/src/main/jni/qwen-asr/: CMakeLists.txt  Makefile  asr_regression.py  main.c  qwen_asr.c  qwen_asr.h  qwen_asr_audio.c  qwen_asr_audio.h  qwen_asr_decoder.c  qwen_asr_encoder.c  qwen_asr_gguf.c  qwen_asr_gguf.h  qwen_asr_internal.h  qwen_asr_kernels.c  qwen_asr_kernels.h  qwen_asr_kernels_avx.c  qwen_asr_kernels_generic.c  qwen_asr_kernels_impl.h  qwen_asr_kernels_neon.c  qwen_asr_kernels_ops.c  qwen_asr_quant.c  qwen_asr_quant.h  qwen_asr_stream.c  qwen_asr_transcribe.c  samples
app/android-device/android/app/src/main/jni/qwen-asr-old/: CMakeLists.txt  qwen_asr_audio.h  qwen_asr_kernels.h  qwen_asr_kernels_generic.c  qwen_asr_kernels_impl.h  qwen_asr_quant.c
app/android-device/android/app/src/main/jni/qwen-tts/: CMakeLists.txt  qwen_tts.c  qwen_tts.h  qwen_tts_audio.c  qwen_tts_codec.c  qwen_tts_generate.c  qwen_tts_ggml_quants.c  qwen_tts_ggml_quants.h  qwen_tts_internal.h  qwen_tts_jni.c  qwen_tts_kernels.c  qwen_tts_kernels.h  qwen_tts_kernels_neon.c  qwen_tts_kernels_ops.c  qwen_tts_quant.c  qwen_tts_quant.h  qwen_tts_safetensors.c  qwen_tts_safetensors.h  qwen_tts_talker.c
app/android-device/android/app/src/main/jni/qwen-tts-old/: qwen_tts_kernels.c
app/rn/: .prettierrc.js  App.tsx  README.md  app.json  metro.config.js  package.json  tsconfig.json
app/rn/android/app/src/main/jni/: CMakeLists.txt
app/rn/android/app/src/main/jni/agent/: standalone_hermes.cpp
app/tests/: api-memory.test.ts  api-sessions.test.ts  bug-reporting.test.ts  device-flow.test.ts  multi-turn-chat.test.ts  package.json  quota-flow.test.ts  scheduled-tasks.test.ts  test-utils.ts  tsconfig.json  vitest.config.ts  worker.ts  wrangler.jsonc
app/tunnel/: package.json
app/win-device/: README.md  connect.ps1  functions.ps1  package.json  publish.ts
design/: AGENTS.md  retries.md
docs/: AGENTS.md  agent-class.md  callable-methods.md  chat-agents.md  client-tools-continuation.md  codemode.md  configuration.md  docs-to-upstream.md  http-websockets.md  human-in-the-loop.md  index.md  mcp-client.md  mcp-servers.md  mcp-transports.md  migration-to-ai-sdk-v6.md  queue.md  retries.md  scheduling.md  securing-mcp-servers.md
examples/: AGENTS.md  TODO.md
examples/a2a/: package.json
examples/ai-chat/: .gitignore  README.md  electron-builder.yml  env.d.ts  package.json  run-on-windows.sh  run-standalone-on-windows.sh  run-standalone.ps1  run-windows.ps1  schema.sql  vite.config.ts  wrangler.jsonc
examples/android-browser/: .gitignore  README.md  package.json  settings.gradle  tsconfig.json
examples/browser-agent/: index.html  package.json  wrangler.jsonc
examples/cloud-browser/: .env.example  README.md  index.html  package.json  vite.config.ts  wrangler.jsonc
examples/codemode/: README.md  env.d.ts  index.html  node-executor-server.ts  package.json  vite.config.ts  wrangler.jsonc
examples/dynamic-tools/: README.md  env.d.ts  index.html  package.json  wrangler.jsonc
examples/experimental/: package.json
examples/mcp/: README.md  index.html  package.json  wrangler.jsonc
examples/mcp-elicitation/: README.md  index.html  package.json  wrangler.jsonc
examples/mcp-rpc-transport/: README.md  env.d.ts  index.html  package.json  wrangler.jsonc
examples/mcp-worker/: package.json  wrangler.jsonc
examples/mcp-worker-authenticated/: README.md  index.html  package.json  wrangler.jsonc
examples/playground/: README.md  TODO.md  env.d.ts  index.html  package.json  testing.md  vite.config.ts  worker-configuration.d.ts  wrangler.jsonc
examples/powershell/: .env.example  README.md  package.json  tsconfig.json
examples/resumable-stream-chat/: package.json  wrangler.jsonc
examples/rn/: .gitignore  README.md  package.json
examples/rn/android/app/src/main/jni/: CMakeLists.txt  OnLoad.cpp
examples/rn/android/app/src/main/jni/agent/: standalone_hermes.cpp
examples/windows-agent/: .env.example  README.md  index.html  package.json  run-on-windows.sh  run-windows.ps1  wrangler.jsonc
examples/workflows/: package.json
examples/x402/: .env.example  README.md  env.d.ts  index.html  package.json  wrangler.jsonc
examples/x402-mcp/: .env.example  README.md  env.d.ts  index.html  package.json  wrangler.jsonc
experimental/: README.md  forever.md  gadgets.md
experimental/forever-chat/: package.json  wrangler.jsonc
experimental/forever-fibers/: README.md  env.d.ts  index.html  package.json  tsconfig.json  wrangler.jsonc
experimental/gadgets-chat/: README.md  env.d.ts  index.html  package.json  wrangler.jsonc
experimental/gadgets-gatekeeper/: .env.example  README.md  env.d.ts  index.html  package.json  wrangler.jsonc
experimental/gadgets-sandbox/: README.md  env.d.ts  index.html  package.json  wrangler.jsonc
experimental/gadgets-subagents/: README.md  env.d.ts  index.html  package.json  wrangler.jsonc
scripts/: check-updates.ts
(+416 files in other folders)
